@@ -2,6 +2,8 @@ v1.1.1
 New : command -M#, --memory=, --memlimit=, --memlimit-decompress= to limit allowed memory consumption
 New : doc/zstd_manual.html, by Przemyslaw Skibinski
 Improved : slightly better compression ratio at --ultra levels (>= 20)
+Added : ZSTD_initCStream_usingCDict(), ZSTD_initDStream_usingDDict() (experimental section)
+Added : example/multiple_streaming_compression
 Changed : zstd_errors.h is now part of include installation
 Fixed : zstd-small, zstd-compress and zstd-decompress compilation targets
 
